# local_yoda

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  progress.md  pyproject.toml
.orcha/groups/284100d2-2dc9-4bb1-86e4-f60e0e5e5c91/: CODEBASE.md
.orcha/groups/6e5fe146-8d70-4fb0-b6ce-6b9674fcf7cf/: CODEBASE.md  PROGRESS.md
.orcha/groups/f1684c9a-f434-4f5a-a473-a1ad1d0b7774/: CODEBASE.md  PROGRESS.md
.orcha/groups/fe85c1a6-a7b3-44fd-a2f3-13cf6c05ee21/: CODEBASE.md
tests/: test_file_tools.py  test_integration.py  test_memory.py  test_tools.py
yoda/: __init__.py  __main__.py  cli.py  config.py  main.py  types.py
yoda/agent/: __init__.py  core.py  memory.py
yoda/agent/tools/: __init__.py  filesystem.py  websearch.py
yoda/cli/: __init__.py  app.py  claude_gen.py  commands.py  main.py  orchestrator.py  protocol.py  renderer.py
yoda/core/: __init__.py  agent.py  config.py  messages.py  plugins.py
yoda/core/providers/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
yoda/knowledge/: __init__.py  extractor.py  graph.py  plugin.py  queries.py  reasoning.py  updater.py  visualization.py
yoda/mcp_server/: __init__.py  server.py  transport.py
yoda/memory/: __init__.py  base.py  chunking.py  context.py  embeddings.py  manager.py  persistence.py  plugin.py  retrieval.py  store.py  vector_store.py
yoda/optimization/: __init__.py  cache.py  compressor.py  cost.py  plugin.py  prompt.py  tokens.py  window.py
yoda/tools/: __init__.py  base.py  engine.py  executor.py  file_tools.py  mcp_client.py  plugin.py  registry.py
yoda/tools/builtins/: __init__.py  calendar_tool.py  file_ops.py  notes.py  shell.py  web.py
yoda/tools/computer/: __init__.py  app_launcher.py  input_control.py  screen.py
yoda/ui/: __init__.py
yoda/web/: __init__.py  app.py
yoda/web/static/: index.html
