[project]
name = "yoda"
version = "0.1.0"
description = "Yoda - Local personal AI agent"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
web = [
    "aiohttp>=3.9",
    "duckduckgo-search>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
